# komga

./: .gitignore  DEVELOPING.md  Dockerfile.local  Dockerfile.local.optimized  application-postgresql-test.yml  docker-compose.local.yml  docker-compose.yml  gradle.properties  run-local-with-postgres.sh  skills-lock.json
komga-rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  openapi.json
komga-rust/migrations/: 001_initial_migration.sql
komga-rust/src/: config.rs  lib.rs  main.rs
komga-rust/src/api/: apikey.rs  auth.rs  book.rs  collection.rs  library.rs  mod.rs  readlist.rs  search.rs  series.rs  task.rs
komga-rust/src/api/dto/: mod.rs
komga-rust/src/application/: metadata.rs  mod.rs  service.rs  task_worker.rs
komga-rust/src/domain/model/: book.rs  collection.rs  library.rs  media.rs  mod.rs  read_progress.rs  readlist.rs  series.rs  task.rs  user.rs
komga-rust/src/domain/repository/: api_key_repository.rs  book_repository.rs  client_settings_repository.rs  collection_repository.rs  historical_event_repository.rs  library_repository.rs  mod.rs  page_hash_repository.rs  read_progress_repository.rs  readlist_repository.rs  series_repository.rs  server_settings_repository.rs  task_repository.rs  thumbnail_repository.rs  (+1 more)
komga-rust/src/infrastructure/: mod.rs
komga-rust/tests/: api_test.rs  coverage_tests.rs  integration_test.rs  unit_tests.rs
komga-rust/tests/common/: mod.rs
komga-rust/tests/integration/: auth_test.rs  collection_test.rs  debug_test.rs  library_test.rs  mod.rs  readlist_test.rs  series_test.rs
(+126 files in other folders)
