[package]
name = "komga-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
thiserror = "1"
anyhow = "1"
utoipa = { version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = "1"
image = "0.25"
base64 = "0.22"
futures = "0.3"
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tantivy = "0.22"
tempfile = "3"
once_cell = "1"
zip = "2"
epub = "2"
pdf = "0.9"
walkdir = "2"
quick-xml = "0.37"
serde-xml-rs = "0.8"
sha2 = "0.10"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-retry = "0.3"

[lib]
name = "komga_rust"
path = "src/lib.rs"

[[bin]]
name = "komga-rust"
path = "src/main.rs"
